--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "6.10.3",
     "@hookform/resolvers": "^4.1.2",
+    "@neondatabase/serverless": "0.10.4",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -42,6 +43,9 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "16.4.7",
+    "drizzle-kit": "0.30.3",
+    "drizzle-orm": "0.39.0",
     "embla-carousel-react": "^8.5.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.476.0",
@@ -56,6 +60,7 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "4.19.2",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
