--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
     "sonner": "^2.0.1",
+    "svix": "1.45.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "4.19.2",
