--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev:all": "concurrently \"bun run dev:webhook\" \"bun run dev\""
   },
   "dependencies": {
-    "@clerk/nextjs": "6.10.3",
+    "@clerk/nextjs": "^6.20.0",
     "@hookform/resolvers": "^4.1.2",
     "@neondatabase/serverless": "0.10.4",
     "@radix-ui/react-accordion": "^1.2.3",
